# behavioral-health-project

./: .dockerignore  .env.bhp.prod.example  .env.example  .env.production  .gitignore  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT_20260212.md  CHANGELOG_v11.md  CHANGELOG_v14.1.md  CHANGELOG_v14.md  CHANGELOG_v15.md  CHANGELOG_v16.md  CHRONICLE_v16_production.md  CLAUDE.md  CLAUDE_CODE_SESSION_GUIDE.md  CLI_VERIFICATION_REPORT.md  DEPLOY_LOG_20260203.md  DEPRECATED_INVENTORY.md  Dockerfile  EXTRACTION_GUIDE.md  FINAL_CLI_VERIFICATION.md  H5-AUDIT-REPORT-56-PAGES.md  H5_IMPLEMENTATION_PLAN.md  H5应用页面导航.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE_v16.md  MINIAPP_DIFY_ARCHITECTURE.md  MOCK_CASES_GUIDE.md  Makefile  P3_INTEGRATION_REPORT.md  PRODUCT_DIFY_RELATIONSHIP.md  PROJECT_CHRONICLE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_V2.md  SETUP_COMPLETE.md  SURGERY_CHANGELOG.md  (+94 more)
_archived_temp_code/: README.md  _v41_register_snippet.py  auth.py  bhp_cold_backup.py  diagnose_errors.py  diagnose_errors_v2.py  dry_run.py  extract_platform_contracts_v2.py  fix_all_41.py  fix_backup_encoding.py  fix_journey_null.py  fix_remaining_39.py  fix_v3_api_12.py  force_fix.py  master_audit.py  migrate_map.py  models_v3.py  setup_behavior_rx.py  test_baps.py  test_dify.py  test_health_advice.py  v41_week3_001_gateway_infra.py  v42_drop_views.py  v42_registry_patch.py  week2.py  week3.py
_contract_extraction_v2/: 0_project_structure.json  10_dify_workflows.json  1_data_models.json  2_api_endpoints.json  3_agent_registry.json  8_frontend.json  (+5 more)
(+2272 files in other folders)
